# livekit-plugins-quickdial

./: LICENSE  README.md  pyproject.toml
examples/: agent.py
livekit/plugins/quickdial/: stt.py  tts.py  version.py
