[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "livekit-plugins-quickdial"
dynamic = ["version"]
description = "LiveKit Agents plugin for Quickdial — cheap, fast, real-time TTS & STT"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10.0"
authors = [{ name = "Samay AI", email = "dev@quickdial.ai" }]
keywords = ["livekit", "agents", "tts", "stt", "quickdial", "voice", "ai"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["livekit-agents[codecs]>=1.0.0", "aiohttp>=3.9"]

[project.urls]
Homepage = "https://quickdial.ai"
Documentation = "https://quickdial.ai/docs"
Source = "https://github.com/samay-ai/livekit-plugins-quickdial"

[tool.hatch.version]
path = "livekit/plugins/quickdial/version.py"

[tool.hatch.build.targets.wheel]
packages = ["livekit"]

[tool.hatch.build.targets.sdist]
include = ["/livekit"]
